--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@solana/buffer-layout": "^4.0.1",
     "@solana/buffer-layout-utils": "^0.2.0",
     "@solana/web3.js": "^1.98.0",
-    "dotenv": "^16.4.7",
-    "node-telegram-bot-api": "^0.66.0"
+    "bs58": "^6.0.0",
+    "dotenv": "^16.4.7"
   }
 }
