--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ RPC_URL = <RPC_URL>
 DISCORD_WEBHOOK_URL = <DISCORD_WEBHOOK_URL> 
 LOG_REPORTS = <true/false>
 DISCORD_ROLE_ID = <DISCORD_ROLE_ID>
+CACHE_SIZE = <CACHE_SIZE> # Default is 1000, can be changed to any number. Make it 0 to disable caching.
